--- a/security-hub/insight/package.json
+++ b/security-hub/insight/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "community-securityhub-standardscontrol",
-    "version": "0.2.2",
-    "description": "AWS custom resource provider named Community::SecurityHub::StandardsControl.",
+    "name": "community-securityhub-insight",
+    "version": "0.1.2",
+    "description": "AWS custom resource provider named Community::SecurityHub::Insight.",
     "private": true,
     "main": "dist/handlers.js",
     "files": [
@@ -25,10 +25,10 @@
         "class-transformer": "0.3.1"
     },
     "devDependencies": {
-        "@types/node": "^12.0.0",
+        "@types/node": "^14.0.0",
         "typescript": "^4.1.2"
     },
     "optionalDependencies": {
-        "aws-sdk": "^2.1058.0"
+        "aws-sdk": "^2.656.0"
     }
 }
