--- a/security-hub/members/package.json
+++ b/security-hub/members/package.json
@@ -15,8 +15,8 @@
         "test": "npx jest"
     },
     "dependencies": {
-        "aws-resource-providers-common": "^0.3.0",
-        "cfn-rpdk": "npm:@org-formation/cfn-rpdk@^0.5.0",
+        "aws-resource-providers-common": "^0.5.0",
+        "@amazon-web-services-cloudformation/cloudformation-cli-typescript-lib": "^1.0.1",
         "class-transformer": "^0.3.1"
     },
     "devDependencies": {
