--- a/organizations/enable-aws-service/example.yml
+++ b/organizations/enable-aws-service/example.yml
@@ -9,3 +9,4 @@ Resources:
     Type: Community::Organizations::EnableAWSServiceAccess
     Properties:
       ServicePrincipal: access-analyzer.amazonaws.com
+      ResourceId: enable-access-analyzer
