--- a/iam/oidc-providers/package.json
+++ b/iam/oidc-providers/package.json
@@ -20,13 +20,13 @@
         "validate": "cfn validate"
     },
     "dependencies": {
-        "aws-resource-providers-common": "^0.2.0",
-        "cfn-rpdk": "npm:@org-formation/cfn-rpdk@^0.4.0",
-        "class-transformer": "^0.3.1"
+        "@amazon-web-services-cloudformation/cloudformation-cli-typescript-lib": "^1.0.3",
+        "aws-resource-providers-common": "^0.5.0",
+        "class-transformer": "0.3.1"
     },
     "devDependencies": {
-        "@types/node": "^12.0.0",
-        "typescript": "^4.1.2"
+        "@types/node": "^14.0.0",
+        "typescript": "^4.9.4"
     },
     "optionalDependencies": {
         "aws-sdk": "^2.1058.0"
