--- a/organizations/delegated-admin/package.json
+++ b/organizations/delegated-admin/package.json
@@ -19,15 +19,15 @@
         "validate": "cfn validate"
     },
     "dependencies": {
-        "aws-resource-providers-common": "^0.2.0",
-        "cfn-rpdk": "npm:@org-formation/cfn-rpdk@^0.4.0",
-        "class-transformer": "^0.3.1",
+        "@amazon-web-services-cloudformation/cloudformation-cli-typescript-lib": "^1.0.3",
+        "aws-resource-providers-common": "^0.5.0",
+        "class-transformer": "0.3.1",
         "uuid": "^7.0.3"
     },
     "devDependencies": {
-        "@types/node": "^12.0.0",
+        "@types/node": "^14.0.0",
         "@types/uuid": "^7.0.3",
-        "typescript": "^3.8.3"
+        "typescript": "^4.9.4"
     },
     "optionalDependencies": {
         "aws-sdk": "^2.656.0"
