--- a/organizations/enable-aws-service/package.json
+++ b/organizations/enable-aws-service/package.json
@@ -20,9 +20,10 @@
         "validate": "cfn validate"
     },
     "dependencies": {
-        "@amazon-web-services-cloudformation/cloudformation-cli-typescript-lib": "^1.0.3",
         "aws-resource-providers-common": "^0.2.0",
-        "class-transformer": "0.3.1",
+        "aws-sdk": "^2.656.0",
+        "cfn-rpdk": "npm:@org-formation/cfn-rpdk@^0.4.0",
+        "class-transformer": "^0.3.1",
         "uuid": "^7.0.3"
     },
     "devDependencies": {
@@ -31,6 +32,6 @@
         "typescript": "^4.9.4"
     },
     "optionalDependencies": {
-        "aws-sdk": "^2.1291.0"
+        "aws-sdk": "^2.656.0"
     }
 }
