--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -21,8 +21,8 @@ jobs:
       PIP_LOG_FILE: /tmp/pip.log
       NODE_OPTIONS: "--max_old_space_size=7000"
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v3
         with:
           python-version: 3.7
       - name: Install Dependencies Python
@@ -33,9 +33,10 @@ jobs:
           curl -s -L https://github.com/aws/aws-sam-cli/releases/latest/download/aws-sam-cli-linux-x86_64.zip -o sam.zip
           unzip -q sam.zip -d ../sam-install
           sudo ../sam-install/install --update
-      - uses: actions/setup-node@v2
+      - uses: actions/setup-node@v3
         with:
           node-version: 14
+          cache: ''
       - name: Install Dependencies Node.js
         id: install_nodejs
         run: |
