set waiting to non-configurable 600 seconds

--- a/ec2/core-network-route/resource-role.yaml
+++ b/ec2/core-network-route/resource-role.yaml
@@ -32,6 +32,7 @@ Resources:
                 Action:
                 - "ec2:CreateRoute"
                 - "ec2:DeleteRoute"
+                - "networkmanager:GetVpcAttachment"
                 Resource: "*"
 Outputs:
   ExecutionRoleArn:
