--- a/route53/vpc-association-authorization/package.json
+++ b/route53/vpc-association-authorization/package.json
@@ -1,6 +1,6 @@
 {
     "name": "community-route53-vpcassociationauthorization",
-    "version": "0.1.0",
+    "version": "0.2.0",
     "description": "AWS custom resource provider named Community::Route53::VPCAssociationAuthorization.",
     "private": true,
     "main": "dist/handlers.js",
@@ -14,19 +14,23 @@
         "submit": "npm run prepack && cfn submit -vv --region us-east-1 --set-default",
         "package": "npm run prepack && cfn submit --dry-run -vv && cp ${npm_package_name}.zip ${npm_package_name}-${npm_package_version}.zip",
         "version": "npm run package && aws s3 cp ${npm_package_name}-${npm_package_version}.zip s3://community-resource-provider-catalog/${npm_package_name}-${npm_package_version}.zip && aws s3 cp resource-role.yaml s3://community-resource-provider-catalog/${npm_package_name}-resource-role-${npm_package_version}.yml",
-        "test": "npx jest",
+        "test": "jest",
         "test:integration": "npx npm-run-all -p -r samstart cfntest",
         "cfntest": "cfn test -vv >> cfn.log",
         "samstart": "sam local start-lambda -l sam.log",
         "validate": "cfn validate"
     },
     "dependencies": {
-        "@amazon-web-services-cloudformation/cloudformation-cli-typescript-lib": "^1.0.1",
+        "@amazon-web-services-cloudformation/cloudformation-cli-typescript-lib": "^1.0.3",
         "aws-resource-providers-common": "^0.5.0",
         "class-transformer": "0.3.1"
     },
     "devDependencies": {
-        "@types/node": "^12.0.0",
+        "@jurijzahn8019/aws-promise-jest-mock": "^2.4.84",
+        "@types/jest": "^29.4.0",
+        "@types/node": "^14.0.0",
+        "jest-junit": "^15.0.0",
+        "ts-jest": "^29.0.5",
         "typescript": "^4.1.2"
     },
     "optionalDependencies": {
