feat: support consolidated findings on hub (#126)

--- a/security-hub/hub/resource-role.yaml
+++ b/security-hub/hub/resource-role.yaml
@@ -34,6 +34,7 @@ Resources:
                 - "iam:DeleteServiceLinkedRole"
                 - "securityhub:DisableSecurityHub"
                 - "securityhub:EnableSecurityHub"
+                - "securityhub:UpdateSecurityHubConfiguration"
                 Resource: "*"
 Outputs:
   ExecutionRoleArn:
