fix: delete aggregator permission missing from manifest

--- a/security-hub/finding-aggregation/resource-role.yaml
+++ b/security-hub/finding-aggregation/resource-role.yaml
@@ -31,6 +31,7 @@ Resources:
               - Effect: Allow
                 Action:
                 - "securityhub:createFindingAggregator"
+                - "securityhub:deleteFindingAggregator"
                 - "securityhub:updateFindingAggregator"
                 Resource: "*"
 Outputs:
