chore: batch members

--- a/security-hub/members/resource-role.yaml
+++ b/security-hub/members/resource-role.yaml
@@ -32,6 +32,7 @@ Resources:
                 Action:
                 - "securityhub:createmembers"
                 - "securityhub:invitemembers"
+                - "securityhub:listMembers"
                 Resource: "*"
 Outputs:
   ExecutionRoleArn:
