--- a/security-hub/security-control/package.json
+++ b/security-hub/security-control/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "community-securityhub-members",
-    "version": "0.2.3",
-    "description": "AWS custom resource provider named Community::SecurityHub::Members.",
+    "name": "community-securityhub-securitycontrol",
+    "version": "0.2.6",
+    "description": "AWS custom resource provider named Community::SecurityHub::SecurityControl.",
     "private": true,
     "main": "dist/handlers.js",
     "files": [
@@ -21,14 +21,15 @@
     },
     "dependencies": {
         "@amazon-web-services-cloudformation/cloudformation-cli-typescript-lib": "^1.0.1",
+        "@aws-sdk/client-securityhub": "^3.312.0",
         "aws-resource-providers-common": "^0.5.0",
         "class-transformer": "0.3.1"
     },
     "devDependencies": {
-        "@types/node": "^14.0.0",
+        "@types/node": "^12.0.0",
         "typescript": "^4.1.2"
     },
     "optionalDependencies": {
-        "aws-sdk": "^2.656.0"
+        "aws-sdk": "^2.1058.0"
     }
 }
