--- a/organizations/delegated-admin/package.json
+++ b/organizations/delegated-admin/package.json
@@ -1,6 +1,6 @@
 {
     "name": "community-organizations-delegatedadmin",
-    "version": "0.1.0",
+    "version": "1.0.0",
     "description": "AWS custom resource provider named Community::Organizations::DelegatedAdmin.",
     "main": "dist/handlers.js",
     "files": [
@@ -19,8 +19,8 @@
         "validate": "cfn validate"
     },
     "dependencies": {
-        "aws-resource-providers-common": "^0.2.0",
-        "cfn-rpdk": "npm:@org-formation/cfn-rpdk@^0.4.0",
+        "aws-resource-providers-common": "^0.5.0",
+        "@amazon-web-services-cloudformation/cloudformation-cli-typescript-lib": "^1.0.1",
         "class-transformer": "^0.3.1",
         "uuid": "^7.0.3"
     },
